<resources>
    <string name="app_name">Read Book</string>

    <!--make Signup bold-->
    <string name="new_user_signup">New user? <b>SignUp</b></string>

    <!-- Content Description -->
    <string name="cd_btn_back">Button Back</string>
    <string name="cd_btn_add">Button Add</string>
    <string name="cd_illust">Illustration</string>
    <string name="cd_image">Image</string>
    <string name="cd_btn_chat">Chat Button</string>
    <string name="cd_email">Button Email</string>
    <string name="cd_icon">Icon</string>

    <!-- Layout Name App Book -->
    <string name="text_dashboard_user">Dashboard User</string>
    <string name="text_abc_example_com">abc@example.com</string>
    <string name="text_add_a_new_category">Add a new category</string>
    <string name="btn_submit">Submit</string>
    <string name="hint_text_category_title">Category Title</string>
    <string name="text_dashboard_admin">Dashboard Admin</string>
    <string name="text_search">Search</string>
    <string name="text_add_category">Add Category</string>
    <string name="text_the_book_title">The Book Title</string>
    <string name="text_the_description_of_the_book">The description of the book</string>
    <string name="text_category">Category</string>
    <string name="text_13mb">13MB</string>
    <string name="text_dd_mm_yyyy">dd/MM/yyyy</string>
    <string name="text_category_title">Category Title</string>
    <string name="text_books">Books</string>
    <string name="text_edit_book_info">Edit Book Info</string>
    <string name="text_book_title">Book Title</string>
    <string name="text_book_description">Book Description</string>
    <string name="text_book_category">Book Category</string>
    <string name="text_update">Update</string>
    <string name="text_welcom_to_read_book">Welcom to Read Book</string>
    <string name="text_login">Login</string>
    <string name="text_continue_without_login">Continue without login</string>
    <string name="text_add_a_new_book">Add a New Book</string>
    <string name="text_create_new_account">Create New Account</string>
    <string name="text_name">Name</string>
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="text_confirm_password">Confirm Password</string>
    <string name="text_register">Register</string>
    <string name="title_read_book">Read Book</string>
    <string name="text_by_cyber">By Cyber</string>
    <string name="text_please_login">Please Login</string>

</resources>