<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back01"
    android:padding="20dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iconIv"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="@dimen/spacing_huger_more"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/cd_image" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/iconIv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/spacing_regular"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/text_welcom_to_read_book"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/iconIv"
        app:layout_constraintStart_toStartOf="@+id/iconIv"
        app:layout_constraintTop_toBottomOf="@+id/iconIv" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/skipBtn"
        android:background="@drawable/shape_button01"
        android:layout_marginBottom="@dimen/spacing_regular"
        android:text="@string/text_login"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/skipBtn"
        app:layout_constraintEnd_toEndOf="@+id/skipBtn"
        app:layout_constraintStart_toStartOf="@+id/skipBtn" />

    <Button
        android:id="@+id/skipBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/spacing_small"
        android:background="@drawable/shape_button02"
        android:text="@string/text_continue_without_login"
        android:textColor="@color/purple_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>