<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back01"
    tools:context=".PdfAddActivity">

    <!--Toolbar-->
    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/shape_toolbar01">

        <!--Back button-->
        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/cd_image"
            android:padding="5dp"
            android:src="@drawable/ic_back_white" />

        <!--Icon Image-->
        <ImageView
            android:id="@+id/iconIv"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_below="@id/backBtn"
            android:layout_centerHorizontal="true"
            android:src="@drawable/logo" />

        <!--Title-->
        <TextView
            android:id="@+id/titleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iconIv"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/text_add_a_new_book"
            android:textColor="@color/white"
            android:textSize="28sp" />

        <!--Attach pdf button-->
        <ImageButton
            android:id="@+id/attachPdfBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/cd_image"
            android:padding="5dp"
            android:src="@drawable/ic_attach_white" />
    </RelativeLayout>

    <!--Inout title-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titleTil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="225dp"
        app:hintEnabled="false">

        <EditText
            android:id="@+id/titleEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_edittext01"
            android:drawableStart="@drawable/ic_pdf_gray"
            android:hint="@string/text_book_title"
            android:drawablePadding="10dp"
            android:inputType="textPersonName|textCapWords"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textColorHint="@color/gray01"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!--Input description-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descirptionTil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_below="@id/titleTil"
        android:layout_marginTop="5dp"
        app:hintEnabled="false">

        <EditText
            android:id="@+id/descriptionEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_edittext01"
            android:padding="10dp"
            android:textColor="@color/black"
            android:drawablePadding="@dimen/spacing_small"
            android:textColorHint="@color/gray01"
            android:hint="@string/text_book_description"
            android:inputType="textMultiLine|textCapSentences"
            android:textSize="16sp"
            android:drawableStart="@drawable/ic_pdf_gray"
            android:paddingBottom="10dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!--Pick category from dialog-->
    <TextView
        android:id="@+id/categoryTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/descirptionTil"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/shape_edittext01"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:hint="@string/text_book_category"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray01"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_category_gray"
        app:drawableEndCompat="@drawable/ic_down_gray" />

    <!--Button: upload pdf-->

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/categoryTv"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/shape_button01"
        android:text="@string/btn_submit"
        android:textColor="@color/white" />


</RelativeLayout>