<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back01"
    tools:context=".PdfEditActivity">

    <!--Toolbar-->
    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/shape_toolbar01">

        <!--Back Button-->
        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="@dimen/spacing_small"
            android:layout_marginEnd="@dimen/spacing_small"
            android:layout_marginBottom="@dimen/spacing_small"
            android:background="@android:color/transparent"
            android:contentDescription="@string/cd_image"
            android:padding="5dp"
            android:src="@drawable/ic_back_white" />

        <!--Logo-->
        <ImageView
            android:id="@+id/iconIv"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/spacing_huge"
            android:contentDescription="@string/cd_image"
            android:src="@drawable/logo" />

        <!--Title-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iconIv"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/text_edit_book_info"
            android:textColor="@color/white"
            android:textSize="@dimen/font_title_content" />

    </RelativeLayout>

    <!--Scrollview-->
    <ScrollView
        android:layout_marginTop="225dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--Input book title-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/titleTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/titleEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edittext01"
                    android:drawableStart="@drawable/ic_pdf_gray"
                    android:drawablePadding="@dimen/spacing_small"
                    android:textSize="@dimen/font_large"
                    android:hint="@string/text_book_title"
                    android:inputType="textPersonName|textCapSentences"
                    android:padding="@dimen/spacing_small"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray01"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!--Input book description-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/descirptionTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/titleTil"
                android:layout_marginStart="@dimen/spacing_large_med"
                android:layout_marginTop="@dimen/spacing_small"
                android:layout_marginEnd="@dimen/spacing_large_med"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/descriptionEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edittext01"
                    android:drawableStart="@drawable/ic_pdf_gray"
                    android:drawablePadding="@dimen/spacing_small"
                    android:hint="@string/text_book_description"
                    android:inputType="textMultiLine|textCapSentences"
                    android:padding="@dimen/spacing_small"
                    android:textSize="@dimen/font_regular"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray01"
                    android:autofillHints="name" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--Pick Book category-->
            <TextView
                android:id="@+id/categoryTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/descirptionTil"
                android:layout_marginStart="@dimen/spacing_large_med"
                android:layout_marginEnd="@dimen/spacing_large_med"
                android:layout_marginTop="@dimen/spacing_small"
                android:background="@drawable/shape_edittext01"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:hint="@string/text_book_category"
                android:padding="@dimen/spacing_small"
                android:textColor="@color/black"
                android:textColorHint="@color/gray01"
                android:textSize="@dimen/font_regular"
                app:drawableStartCompat="@drawable/ic_category_gray"
                app:drawableEndCompat="@drawable/ic_down_gray" />

            <!--Button, Update info-->
            <Button
                android:id="@+id/submitBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/categoryTv"
                android:layout_marginStart="@dimen/spacing_large_med"
                android:layout_marginTop="@dimen/spacing_regular"
                android:layout_marginEnd="@dimen/spacing_large_med"
                android:background="@drawable/shape_button01"
                android:text="@string/text_update"
                android:textColor="@color/white" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>